# boboagent

./: .gitignore  ANALYSIS_REPORT.md  CHANGELOG.md  LICENSE  NOTICE.md  README.md  bobo  config.py  display.py  install.sh  latex_editor.html  main.py  pyproject.toml  set_config.py
bobo_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
bobo_tui_gateway/: __init__.py  entry.py  server.py  transport.py
core/: context.py  engine.py  engine_adapter.py  file_safety.py  llm_caller.py  privacy.py  provider.py  session_manager.py  skill_executor.py  skill_manager.py  tool_executor.py  tool_runner.py  tracer.py
mario-game/: index.html
skills/: Python调研.md  coding_master.yaml  company_research.md  daily_report.md  index.json  快速搜索.md
tests/: conftest.py  mock_llm.py  perf_test.py  simple_test.py  test_advanced.py  test_all.py  test_api.py  test_api_retry.py  test_auto_progress.py  test_basic.py  test_batch1_fixes.py  test_bold_and_duplicate.py  test_browser.py  test_bugfixes.py  test_classify.py  test_claude_ui.py  test_claude_ui_v2.py  test_code.py  test_code_skill.py  test_command_safety.py  test_complex.py  test_complex_real.py  test_complex_render.py  test_complex_task.py  test_context.py  test_context_marking.py  test_debug.py  test_dedup.py  test_duplicate.py  test_duplicate2.py  test_duplicate_print.py  test_engine_core.py  test_engine_error.py  test_engine_request.py  test_engine_simple.py  test_engine_tool.py  test_error.py  test_file.py  test_full_flow.py  test_fuzzy_intent.py  (+49 more)
tools/: __init__.py  analyze_emails.py  api_call.py  api_register.py  append_obsidian.py  batch_copy_notes.py  batch_delete_notes.py  batch_move_notes.py  bobo_profile.py  bobo_schedule.py  browser.py  classify_note.py  clipboard.py  code_execution.py  code_to_obsidian.py  contracts.py  copy_to_notion.py  crawler.py  create_calendar_event.py  create_folder.py  cross_project_search.py  cross_search.py  delete_folder.py  delete_note.py  edit_file.py  email_module.py  execute_terminal.py  file_operation.py  file_writer.py  get_current_time.py  git_status.py  github_create_pr.py  github_create_repo.py  (+40 more)
(+37 files in other folders)
