[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bobo-agent"
version = "0.4.4"
description = "Bobo — a personal AI agent for your terminal, Obsidian, and email"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "niuqingwei"},
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/niuqingwei/bobo-agent"

[project.scripts]
bobo = "bobo_tui_gateway.entry:main"

[tool.setuptools.packages.find]
include = ["bobo_tui_gateway*", "core*", "tools*"]

[tool.setuptools.package-data]
bobo_tui_gateway = ["static/entry.js", "static/package.json"]

[tool.setuptools]
py-modules = ["config"]  # install config.py as a top-level module

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = ["-v", "--tb=short", "--strict-markers"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "unit: unit tests for individual functions",
    "integration: integration tests that cross module boundaries",
    "security: security-related tests",
]
